devhub-tools/main/default/objects/DocGen_Subscriber_Org__c/DocGen_Subscriber_Org__c.object-meta.xml
<CustomObject>
    <description>Tracks a Salesforce org that has installed the DocGen package. Child of Account — one company can have many orgs (production, sandboxes, dev orgs).</description>
    <label>Subscriber Org</label>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriber Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>