devhub-tools/main/default/objects/DocGen_Subscriber_Org__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The company/organization that owns this Salesforce org.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriber Orgs</relationshipLabel>
    <relationshipName>Subscriber_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>