devhub-tools/main/default/objects/DocGen_Subscriber_Org__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <description>When the package was first installed in this org.</description>
    <label>Install Date</label>
    <type>DateTime</type>
</CustomField>