devhub-tools/main/default/objects/DocGen_Subscriber_Org__c/fields/Install_Status__c.field-meta.xml
<CustomField>
    <fullName>Install_Status__c</fullName>
    <description>Current install status of the package in this org.</description>
    <label>Install Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Installed</fullName><default>true</default><label>Installed</label></value>
            <value><fullName>Uninstalled</fullName><default>false</default><label>Uninstalled</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>