devhub-tools/main/default/objects/DocGen_Subscriber_Org__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <description>Salesforce instance (e.g. NA45, CS105, etc.).</description>
    <label>Instance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>