devhub-tools/main/default/objects/DocGen_Subscriber_Org__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <description>When this record was last synced from PackageSubscriber data.</description>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>