devhub-tools/main/default/objects/DocGen_Subscriber_Org__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>The 15 or 18-character Salesforce Org ID.</description>
    <externalId>true</externalId>
    <label>Org ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>