devhub-tools/main/default/objects/DocGen_Subscriber_Org__c/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <description>Type of Salesforce org (Production, Sandbox, Scratch, Developer).</description>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Production</fullName><default>false</default><label>Production</label></value>
            <value><fullName>Sandbox</fullName><default>false</default><label>Sandbox</label></value>
            <value><fullName>Scratch</fullName><default>false</default><label>Scratch</label></value>
            <value><fullName>Developer</fullName><default>false</default><label>Developer Edition</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>