devhub-tools/main/default/objects/DocGen_Subscriber_Org__c/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <description>The installed package version (e.g. 1.1.3).</description>
    <label>Package Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>